# franki

./: .coverage  .gitignore  CONTRIBUTING.md  DOCS.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
franki/: __init__.py  ai_ops.py  audit.py  cache.py  change_tracker.py  commands.py  config.py  config_cmd.py  cost_tracker.py  custom_tools.py  environment.py  exporter.py  feedback.py  hooks.py  main.py  mcp_client.py  memory.py  mitre.py  notifications.py  oneshot.py  profiles.py  project_context.py  quiz.py  report.py  reporter.py  router.py  routing.py  session.py  session_store.py  setup_wizard.py  skills.py  templates.py
franki/agent/: __init__.py  loop.py  tools.py
franki/providers/: __init__.py  anthropic.py  azure.py  cohere.py  delkaai.py  gemini.py  generic.py  groq.py  openrouter.py
franki/ui/: logo.py  phrases.py  theme.py  tips.py  token_warning.py  version_check.py
franki/utils/: ai.py  files.py  highlight.py  search.py  shell.py  test_runner.py
tests/: conftest.py  test_agent_loop.py  test_agent_tools.py  test_anthropic_provider.py  test_auto_compact.py  test_clipboard_and_cost.py  test_commands.py  test_commands_extra.py  test_config.py  test_config_cmd.py  test_config_extra.py  test_cost_tracker.py  test_environment.py  test_exporter.py  test_feedback.py  test_four_features.py  test_git_injection.py  test_main_extra.py  test_main_funcs.py  test_memory.py  test_mitre.py  test_mitre_extra.py  test_new_features.py  test_notifications.py  test_oneshot.py  test_project_context.py  test_provider_errors.py  test_providers.py  test_report.py  test_router.py  test_routing.py  test_routing_extra.py  test_search.py  test_session.py  test_setup_wizard.py  test_skills.py  test_small_gaps.py  test_utils.py  test_utils_ai.py  test_v020_features.py  (+1 more)
