[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "franki-cli"
version = "0.1.9"
description = "AI-powered CLI for coding, pentesting, and SOC work — bring your own models"
authors = [{name = "Frank Dela Nutsukpuie", email = "frankdela@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["ai", "cli", "pentesting", "soc", "coding", "groq", "openrouter", "ollama", "anthropic", "cohere", "azure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.0",
    "pyperclip>=1.8.2",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "ddgs>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/Frank729-ctrl/franki"
Repository = "https://github.com/Frank729-ctrl/franki"

[project.scripts]
franki = "franki.main:main"

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
where = ["."]
include = ["franki*"]
